// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
<Default__StyledSpan>
  <Loader
    centered={false}
    className=""
    key=".0"
    label=""
    spinnerSize={40}
    strokeSize={3}
  >
    <div />
  </Loader>
</Default__StyledSpan>
`;

exports[`When using snapshots with a label prop Should render with an element children 1`] = `
<Default__StyledSpan>
  <Loader
    centered={false}
    className=""
    key=".0"
    label="This is a label"
    spinnerSize={40}
    strokeSize={3}
  >
    <div />
  </Loader>
</Default__StyledSpan>
`;
